--- a/.github/workflows/Snyk-SCA-SAST-NodeJS.yml
+++ b/.github/workflows/Snyk-SCA-SAST-NodeJS.yml
@@ -25,7 +25,7 @@ permissions: {}
 
 jobs:
   Snyk_Default_Branch_Check:
-    if: contains(fromJson('["refs/heads/master", "refs/heads/main"]'), github.ref)
+    if: contains(fromJson'["refs/heads/master", "refs/heads/main"]'), github.ref)
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -59,7 +59,6 @@ jobs:
           snyk code test --all-projects --severity-threshold=high || true
 
   Snyk_Feature_Branch_Check:
-    if: contains(fronJson'["refs/heads/master", "refs/heads/main"]'), github.ref)
     runs-on: ubuntu-latest
     permissions:
       contents: write
