--- a/.github/workflows/Snyk-SCA-SAST-NodeJS.yml
+++ b/.github/workflows/Snyk-SCA-SAST-NodeJS.yml
@@ -52,11 +52,11 @@ jobs:
       - name: Snyk SCA Monitoring with upload results to Snyk Cloud
         run: |
           snyk monitor --org=${{ secrets.snyk_org }} --all-projects --severity-threshold=high
-          snyk test --all-projects --severity-threshold=high || true
+          snyk test --all-projects --severity-threshold=high
 
       - name: Snyk Code Scanning
         run: |
-          snyk code test --all-projects --severity-threshold=high || true
+          snyk code test --all-projects --severity-threshold=high
 
   Snyk_Feature_Branch_Check:
     runs-on: ubuntu-latest
